@@ -1,5 +1,8 @@
 Changes with Apache 2.0.35
 
+  *) Allow worker MPM to build on systems without pthread_kill().
+     [Pier Fumagalli, Jeff Trawick]
+
   *) Prevent ap_add_output_filters_by_type from being called in
      ap_set_content_type if the content-type hasn't changed.
      [Justin Erenkrantz]
